feat: 重构 getTheSourceByLineAndColumn，并新增 getTheSourceByError 方法

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "source-map-trace",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Restore the specified location code according to sourceMap.",
   "author": "chenyueban <jasonchan0527@gmail.com>",
   "keywords": [
@@ -16,9 +16,11 @@
     "url": "https://github.com/chenyueban/source-map-trace/issues"
   },
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "cross-env NODE_ENV=production rollup -c",
     "dev": "cross-env NODE_ENV=development rollup -c -w",
-    "test": "jest"
+    "test": "jest",
+    "update:deps": "yarn upgrade-interactive --latest"
   },
   "license": "MIT",
   "main": "index.js",
@@ -32,20 +34,22 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
+    "error-stack-parser": "^2.0.6",
     "source-map": "^0.7.3"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "@types/jest": "^25.1.4",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@types/jest": "^26.0.8",
     "cross-env": "^7.0.2",
-    "cz-conventional-changelog": "3.1.0",
-    "jest": "^25.1.0",
-    "rollup": "^1.32.0",
-    "rollup-plugin-terser": "^5.2.0",
-    "rollup-plugin-typescript2": "^0.26.0",
-    "ts-jest": "^25.2.1",
-    "typescript": "^3.8.3"
+    "cz-conventional-changelog": "3.2.0",
+    "jest": "^26.2.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.23.0",
+    "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-typescript2": "^0.27.1",
+    "ts-jest": "^26.1.4",
+    "typescript": "^3.9.7"
   },
   "config": {
     "commitizen": {
