--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "error-stack-parser": "^2.0.6",
-    "source-map": "^0.7.3"
+    "error-stack-parser": "^2.1.4",
+    "source-map": "^0.8.0-beta.0"
   },
   "devDependencies": {
     "@chenyueban/eslint-config": "^1.0.11",
