--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "source-map-trace",
+  "type": "module",
   "version": "0.2.2",
   "description": "Restore the specified location code according to sourceMap.",
   "keywords": [
@@ -16,12 +17,12 @@
   "bugs": {
     "url": "https://github.com/chenyueban/source-map-trace/issues"
   },
-  "main": "./dist/index.cjs",
+  "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.cjs",
+      "require": "./dist/index.js",
       "import": "./dist/index.mjs",
       "types": "./dist/index.d.ts"
     }
@@ -32,8 +33,8 @@
   "sideEffects": false,
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "unbuild",
-    "dev": "cross-env NODE_ENV=development rollup -c -w",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "test": "jest",
     "update:deps": "pnpm update -i -r --latest",
     "preinstall": "npx only-allow pnpm",
@@ -45,7 +46,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "error-stack-parser": "2.0.6",
+    "error-stack-parser": "^2.1.4",
     "source-map": "^0.8.0-beta.0"
   },
   "devDependencies": {
@@ -66,6 +67,7 @@
     "release-it": "^15.0.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.5",
+    "tsup": "^6.1.2",
     "typescript": "^4.7.4",
     "unbuild": "^0.7.4"
   }
